gitops_dryrun_hot_emea/manifests/platform/backstage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    backstage.io/component: default.backstage-local  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: ghcr.io/katharinasick/backstage-playground:1.2.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
          volumeMounts:
            - name: config
              mountPath: /app/app-config.production.yaml
              subPath: app-config.production.yaml
      volumes:
        - name: config
          configMap:
            name: backstage-config
